# wasmtest

./: .gitignore  Cargo.toml  Makefile  README.md  demo.py  index.mjs  package.json  requirements.txt
jsbind/: act-utils.d.ts  act-utils.mjs  my-component-nowasi.d.ts  my-component-nowasi.mjs
jsbind/act-utils/: creds-client.mjs  http-client.mjs  print-client.mjs  time-client.mjs
jsbind/interfaces/: act-utils-alarm-connector-def.d.ts  act-utils-connector-types.d.ts  connector-types.d.ts  creds-client.d.ts  http-client.d.ts  print-client.d.ts  time-client.d.ts
pybind/: __init__.py  intrinsics.py
pybind/exports/: alarm_connector_def.py  connector_types.py
pybind/imports/: __init__.py  connector_types.py  creds_client.py  http_client.py  print_client.py  time_client.py
src/: blah.rs  lib.rs
wit/: act-connector.wit  act-utils.wit  host.foo
