[package]
name = "wasmtest"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config= { path = "/Users/lnj/workplace/smithy-rs/aws/sdk/build/aws-sdk/sdk/aws-config", default-features = false }
aws-smithy-async= {  path = "/Users/lnj/workplace/smithy-rs/aws/sdk/build/aws-sdk/sdk/aws-smithy-async" }
aws-smithy-client= {  path = "/Users/lnj/workplace/smithy-rs/aws/sdk/build/aws-sdk/sdk/aws-smithy-client", default-features = false }
aws-smithy-http= {  path = "/Users/lnj/workplace/smithy-rs/aws/sdk/build/aws-sdk/sdk/aws-smithy-http", features = ["event-stream"] }
aws-credential-types= {  path = "/Users/lnj/workplace/smithy-rs/aws/sdk/build/aws-sdk/sdk/aws-credential-types", features = ["hardcoded-credentials"] }
aws-sdk-dynamodb = { path = "/Users/lnj/workplace/smithy-rs/aws/sdk/build/aws-sdk/sdk/dynamodb", default-features = false }

# aws-config= { git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", default-features = false }
# aws-smithy-async= {  git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next" }
# aws-smithy-client= {  git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", default-features = false }
# aws-smithy-http= {  git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", features = ["event-stream"] }
# aws-credential-types= {  git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", features = ["hardcoded-credentials"] }
# aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", default-features = false }

async-trait = "0.1.71"
js-sys = "0.3.64"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.37"
fluvio-wasm-timer = "0.2.5"
serde-wasm-bindgen = "0.5.0"
tower = "0.4.13"
http = "0.2.9"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.serde]
version = "1.0.171"
features = ["derive"]

[dependencies.web-sys]
version = "0.3.60"
features = ["console", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"]

[dependencies.tokio]
version = "1.29.1"
# features = ["full"]
features = ["macros", "rt"]

[lib]
crate-type = ["cdylib"]