[package]
name = "wasmtest"
version = "0.1.0"
edition = "2021"

[dependencies]
#Using published SDK
aws-config= { version = "0.56.0", default-features = false }
aws-smithy-async= { version = "0.56.0" }
aws-smithy-client= { version = "0.56.0", default-features = false }
aws-smithy-http= { version = "0.56.0", features = ["event-stream"] }
aws-credential-types= { version = "0.56.0", features = ["hardcoded-credentials"] }
aws-sdk-dynamodb = { version = "0.29.0", default-features = false }

# Uncomment to use local smithy-rs built SDK
# aws-config= { path = "/Users/lnj/workplace/smithy-rs/aws/sdk/build/aws-sdk/sdk/aws-config", default-features = false }
# aws-smithy-async= {  path = "/Users/lnj/workplace/smithy-rs/aws/sdk/build/aws-sdk/sdk/aws-smithy-async" }
# aws-smithy-client= {  path = "/Users/lnj/workplace/smithy-rs/aws/sdk/build/aws-sdk/sdk/aws-smithy-client", default-features = false }
# aws-smithy-http= {  path = "/Users/lnj/workplace/smithy-rs/aws/sdk/build/aws-sdk/sdk/aws-smithy-http", features = ["event-stream"] }
# aws-credential-types= {  path = "/Users/lnj/workplace/smithy-rs/aws/sdk/build/aws-sdk/sdk/aws-credential-types", features = ["hardcoded-credentials"] }
# aws-sdk-dynamodb = { path = "/Users/lnj/workplace/smithy-rs/aws/sdk/build/aws-sdk/sdk/dynamodb", default-features = false }

# Uncomment to use next branch of aws-sdk-rust Github
# aws-config= { git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", default-features = false }
# aws-smithy-async= {  git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next" }
# aws-smithy-client= {  git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", default-features = false }
# aws-smithy-http= {  git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", features = ["event-stream"] }
# aws-credential-types= {  git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", features = ["hardcoded-credentials"] }
# aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", default-features = false }

tower = "0.4.13"
http = "0.2.9"
wit-bindgen = { version = "0.9.0" }
tokio = {version = "1.29.1", features = ["macros", "rt"]}
serde_json = "1.0.104"
serde = {version = "1.0.183", features = ["derive"]}

[lib]
crate-type = ["cdylib"]
